// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailVestigingActiviteitenItem rendering should render no activities 1`] = `""`;

exports[`MapDetailVestigingActiviteitenItem rendering should render one activity 1`] = `
<div
  className="map-detail-result__item"
>
  <section
    className="map-detail-result__item-content"
  >
    <div
      className="map-detail-result__item-label"
    >
      SBI-activiteiten
    </div>
    <ul
      className="map-detail-result__item-value map-detail-result__item-list"
    >
      <li
        className="map-detail-result__item-list-item"
        key="01"
      >
        01
        : 
        SBI Description 1
      </li>
    </ul>
  </section>
</div>
`;

exports[`MapDetailVestigingActiviteitenItem rendering should render two activities 1`] = `
<div
  className="map-detail-result__item"
>
  <section
    className="map-detail-result__item-content"
  >
    <div
      className="map-detail-result__item-label"
    >
      SBI-activiteiten
    </div>
    <ul
      className="map-detail-result__item-value map-detail-result__item-list"
    >
      <li
        className="map-detail-result__item-list-item"
        key="01"
      >
        01
        : 
        SBI Description 1
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="02"
      >
        02
        : 
        SBI Description 2
      </li>
    </ul>
  </section>
</div>
`;
